# pysunpower

./: .flake8  .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
.github/workflows/: main.yml
pysunpower/: __init__.py  devicemodel.py  sunpower.py  sunpowermodel.py
tests/: test_model.py  type_g.json
